@@ -1,3 +1,6 @@
+18 June 2018: Wouter
+	- Fix that control-use-cert: no works for 127.0.0.1 to disable certs.
+
 15 June 2018: Wouter
 	- tag for 1.7.3rc1.
 
